# AcheronNG

./: .gitignore  CMakeLists.txt  README.md  acheron-public-api.md  build_acheron.bat  vcpkg-configuration.json  vcpkg.json  vr-offsets.md
cmake/: headerlist.cmake  sourcelist.cmake
src/: GameForms.h  PCH.h  main.cpp
src/Acheron/: Defeat.cpp  EventSink.cpp  Misc.cpp  Resolution.cpp  Validation.cpp
src/Acheron/Hooks/: Hooks.cpp  Processing.cpp
src/Acheron/Interface/: HunterPride.cpp  HunterPride.h
src/Papyrus/: Config.cpp  Functions.cpp  Functions.h
src/Serialization/: Settings.h
